--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # Core Web Framework
 fastapi>=0.110.0
-uvicorn[standard]==0.24.0
 
 # Async & HTTP
 aiohttp==3.9.1
@@ -34,3 +33,6 @@ gunicorn
 
 # Shodan Intelligence
 shodan>=1.28.0
+
+gunicorn 
+hypercorn
